Add JDK 8 compatibility (#40)